feat : 여러 이동, 여러 자동차 기능 및 리팩터링 완료